Archive2/fb/ec1b6676343775/output
main.cpp:6:14: error: expression is not assignable
        this = nullptr;
        ~~~~ ^
1 error generated.
