Archive2/fb/ec1b6676343775/main.cpp
#include <string>
#include <iostream>

struct X {
    X() {
        this = nullptr;
    }
};

int main() {
}